# DeepSentinel

./: .env.example  .gitignore  DeepSentinel.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-colab.txt  requirements.txt
app/: api.py  gradio_app.py
notebooks/: 01_data_exploration.ipynb  02_preprocessing.ipynb  03_training.ipynb  04_evaluation.ipynb  05_finetune_diverse.ipynb
scripts/: download_weights.py  setup.py
src/: detector.py  evaluate.py  model.py  preprocess.py  train.py  utils.py
tests/: test_api.py  test_detector.py  test_preprocess.py
