[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "deepsentinel"
version = "1.0.0"
description = "AI-powered deepfake image detection using EfficientNet-B4"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "timm>=0.9.0",
    "facenet-pytorch>=2.5.3",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "albumentations>=1.3.0",
    "gradio>=4.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "tqdm>=4.66.0",
    "huggingface-hub>=0.19.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "app*"]
